[package]
name = "yfft"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/yfft-rs"
description = """
Simple fast Fourier transform library optimized for small, power-of-two,
single precision transforms and x86 systems
"""
keywords = ["fft", "dft", "discrete", "numerics", "dsp", "fourier", "transform"]
categories = ["algorithms", "science"]

[dependencies]
num-complex = "0.1.36"
num-iter = "0.1.33"
num-traits = "0.1.37"
packed_simd = "0.3.0"

[badges]
maintenance = { status = "passively-maintained" }
